# Sign-Language-Recognition

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Data/: labels.txt
config/: settings.py
modules/: dataset_builder.py  model_trainer.py  preprocess_dataset.py  streamlit_utils.py  tts_engine.py  utils.py
