[project]
name = "sign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gtts>=2.5.4",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "playsound==1.2.2",
    "pyttsx3>=2.99",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "streamlit-webrtc>=0.63.11",
    "tensorflow>=2.9",
]
